Removed the hard-coding of user.home location. Instead using ace.root.dir as the property for locating aceoperator configuration.