@@ -170,7 +170,7 @@
 				<version>2.10</version>
 
 				<configuration>
-					<argLine>-Xmx512m -XX:MaxPermSize=128m</argLine>
+					<argLine>-Xmx512m</argLine>
 					<useSystemClassLoader>true</useSystemClassLoader>
 					<includes>
 						<include>**/unit/*.java</include>
@@ -180,6 +180,11 @@
 						<property>
 							<name>basedir</name>
 							<value>${basedir}</value>
+						</property>
+
+						<property>
+							<name>ace.root.dir</name>
+							<value>${user.home}</value>
 						</property>
 					</systemProperties>
 				</configuration>
